Log posts made into components.

--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -16,6 +16,7 @@
 @import "../components/Footer/_footer";
 @import "../components/Goals/_goals";
 @import "../components/Header/_header";
+@import "../components/LogPost/_log-post";
 @import "../components/ProgressBar/_progress-bar";
 @import "../components/Section/_section";
 
