--- a/src/pages/BlogPost/_blog-post.scss
+++ b/src/pages/BlogPost/_blog-post.scss
@@ -1,4 +1,4 @@
-article.log-post {
+article.blog-post {
   padding: 2rem 3rem 2rem 2rem;
   background-color: var(--color-grey);
 
@@ -30,7 +30,7 @@ article.log-post {
   }
 }
 
-section.log-post {
+section.blog-post {
   background-color: var(--color-grey);
   width: 100%;
 }
