--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -425,7 +425,9 @@ section.blog-post {
   position: fixed;
   left: calc(62vw - 1rem);
   background-image: url("../../public/images/photo/6.jpg");
-  background-size: contain;
+  background-size: auto;
+  background-position: left;
+  background-repeat: no-repeat;
 }
 
 #imagination-main aside h2 {
