--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -59,8 +59,8 @@
       text-decoration: none;
 
       transition:
-        transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65),
-        border-radius 0.2s 0.4s ease;
+      transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65),
+      border-radius 0.2s 0.4s ease;
 
       &:focus,
       &:hover {
@@ -75,6 +75,23 @@
       span {
         font-size: var(--h2);
         font-weight: bold;
+      }
+
+      div {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        span {
+          background-color: var(--color-blood);
+          border-radius: 0.5rem;
+          margin-left: 1rem;
+          padding: 0.5rem;
+
+          font-size: calc(var(--base-font-size) / 2);
+          font-weight: bold;
+          color: var(--color-white);
+        }
       }
     }
   }
