--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -254,6 +254,29 @@ section:nth-child(1) section {
   font-weight: bold;
 }
 
+.link-list ul li a div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.link-list ul li a div span {
+  background-color: var(--color-blood);
+  border-radius: 0.5rem;
+  margin-left: 1rem;
+  padding: 0.5rem;
+  font-size: calc(var(--base-font-size) / 2);
+  font-weight: bold;
+  color: var(--color-white);
+}
+
 .respond {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
