--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -6,6 +6,7 @@
 @import "../pages/BlogPost/Blog-post";
 @import "../pages/Home/_home";
 @import "../pages/Music/_music";
+  @import "../pages/Music/AetherMechanics/_aether-mechanics";
 @import "../pages/Streaming/_streaming";
 @import "../pages/Photography/_photography";
 
