NavLink now works for int and ext links.

--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -17,6 +17,7 @@
 @import "../components/Goals/_goals";
 @import "../components/Header/_header";
 @import "../components/LogPost/_log-post";
+@import "../components/NavLink/_nav-link";
 @import "../components/ProgressBar/_progress-bar";
 @import "../components/Section/_section";
 
