Photography changed to Photo

--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -8,7 +8,7 @@
 @import "../pages/Music/_music";
   @import "../pages/Music/AetherMechanics/_aether-mechanics";
 @import "../pages/Streaming/_streaming";
-@import "../pages/Photography/_photography";
+@import "../pages/Photo/_photo";
 
 // COMPONENTS
 @import "../components/Banner/_banner";
