--- a/src/components/Banner/_banner.scss
+++ b/src/components/Banner/_banner.scss
@@ -11,7 +11,7 @@ section {
 
   z-index: 2;
 
-    & div.info {
+  & div.info {
     width: 100%;
     padding: 2rem;
 
@@ -21,5 +21,9 @@ section {
     flex-direction: column;
 
     background-color: var(--color-white);
+  }
+
+  & div.info:hover {
+    cursor: not-allowed;
   }
 }
