--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -7,6 +7,7 @@
 @import "../pages/Home/_home";
 @import "../pages/Music/_music";
   @import "../pages/Music/AetherMechanics/_aether-mechanics";
+  @import "../pages/Music/HypnusRecords/_hypnus-records";
 @import "../pages/Streaming/_streaming";
 @import "../pages/Photo/_photo";
 
