Ntogn page added.

--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -8,6 +8,7 @@
 @import "../pages/Music/_music";
   @import "../pages/Music/AetherMechanics/_aether-mechanics";
   @import "../pages/Music/HypnusRecords/_hypnus-records";
+  @import "../pages/Music/Ntogn/_ntogn";
 @import "../pages/Streaming/_streaming";
 @import "../pages/Photo/_photo";
 
