--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -9,6 +9,7 @@
   @import "../pages/Music/AetherMechanics/_aether-mechanics";
   @import "../pages/Music/HypnusRecords/_hypnus-records";
   @import "../pages/Music/Ntogn/_ntogn";
+  @import "../pages/Music/TheMemoir/_thememoir";
 @import "../pages/Streaming/_streaming";
 @import "../pages/Photo/_photo";
 
