--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -85,7 +85,7 @@
         span {
           background-color: var(--color-blood);
           border-radius: 0.5rem;
-          margin-left: 1rem;
+          margin: 0 1rem;
           padding: 0.5rem;
 
           font-size: calc(var(--base-font-size) / 2);
