--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -270,7 +270,7 @@ section:nth-child(1) section {
 .link-list ul li a div span {
   background-color: var(--color-blood);
   border-radius: 0.5rem;
-  margin-left: 1rem;
+  margin: 0 1rem;
   padding: 0.5rem;
   font-size: calc(var(--base-font-size) / 2);
   font-weight: bold;
