--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,6 +17,7 @@ $red: #af3333; // FOR DEBUGGING
   --color-grey: #d2d2ce;
   --color-orange: #f66c03;
   --color-yellow: #ffb532;
+  --color-shadow: rgba(0, 0, 0, 0.15);
 
   // FONT SIZE SCALES
 
