--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -63,11 +63,19 @@ button {
 }
 
 details {
-  margin-bottom: 1rem;
+  margin: 1rem 0;
   padding: 1rem;
-  background-color: var(--color-grey);
+  background-color: var(--color-white);
+  border: .2rem solid var(--color-dark);
   border-radius: .5rem;
   cursor: pointer;
+
+  transition: 1s;
+
+  &:hover {
+    box-shadow: -0.3rem 0.4rem .01rem var(--color-shadow);
+    transition: var(--speed-fast);
+  }
 
   &:last-child {
     margin-bottom: 0;
