Navigation sections changed to Nav elements.

--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -2,6 +2,7 @@
 @import "_mixins";
 
 // PAGES
+@import "../pages/About/_about";
 @import "../pages/Log/_log";
 @import "../pages/BlogPost/Blog-post";
 @import "../pages/Home/_home";
