--- a/src/pages/Streaming/_streaming.scss
+++ b/src/pages/Streaming/_streaming.scss
@@ -249,7 +249,7 @@
   transition: var(--speed-fast);
 
   &:hover {
-    box-shadow: -0.3rem 0.3rem 0 rgba(51, 51, 51, 0.194);
+    @include box-shadow;
     
   }
 }
