--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,7 @@
+@mixin box-shadow {
+    box-shadow: -0.3rem 0.4rem .01rem var(--color-shadow);
+}
+
 @mixin photo-default {
   min-height: 89vh;
   padding: 2rem;
