--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,6 @@
 $font-main: "Roboto", Arial, Helvetica, sans-serif;
 $font-dragon: "UnifrakturMaguntia", "Times New Roman", serif;
- 
+@import '_mixins';
 @import '_variables';
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap');
 
@@ -73,7 +73,7 @@ details {
   transition: 1s;
 
   &:hover {
-    box-shadow: -0.3rem 0.4rem .01rem var(--color-shadow);
+    @include box-shadow;
     transition: var(--speed-fast);
   }
 
