Editing Words content and styling.

--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -13,6 +13,7 @@
   @import "../pages/Music/TheMemoir/_thememoir";
 @import "../pages/Streaming/_streaming";
 @import "../pages/Photo/_photo";
+@import "../pages/Words/_words";
 
 // COMPONENTS
 @import "../components/Banner/_banner";
