Fixed hover color issue.

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -39,7 +39,7 @@ header {
         transition: var(--speed-slow);
 
         &:hover {
-          background-color: var(--color-generally);
+          background-color: var(--color-grey);
           color: var(--color-dark);
           text-decoration: none;
 
