--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1008,7 +1008,7 @@ header ul li a {
 }
 
 header ul li a:hover {
-  background-color: var(--color-generally);
+  background-color: var(--color-grey);
   color: var(--color-dark);
   text-decoration: none;
   -webkit-transition: var(--speed-fast);
