--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -75,8 +75,7 @@ a:visited {
   transition: color var(--speed-fast);
 }
 
-a:focus, a:hover,
-a:visited:focus,
+a:hover,
 a:visited:hover {
   color: var(--color-blood);
   text-decoration: none;
@@ -249,7 +248,7 @@ section:nth-child(1) section {
   transition: transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65), border-radius 0.2s 0.4s ease, -webkit-transform var(--speed-slow) cubic-bezier(0.81, 0.02, 0.92, 0.65);
 }
 
-.link-list ul li a:focus, .link-list ul li a:hover {
+.link-list ul li a:hover {
   border-radius: 1rem 0 0 1rem;
   -webkit-transform: translateX(1rem);
           transform: translateX(1rem);
@@ -993,6 +992,8 @@ header ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 header ul li:last-child {
