--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -83,14 +83,13 @@
         align-items: center;
 
         span {
-          background-color: var(--color-blood);
+          background-color: var(--color-grey);
           border-radius: 0.5rem;
           margin: 0 1rem;
           padding: 0.5rem;
 
           font-size: calc(var(--base-font-size) / 2);
           font-weight: bold;
-          color: var(--color-white);
         }
       }
     }
