--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -277,13 +277,12 @@ section:nth-child(1) section {
 }
 
 .link-list ul li a div span {
-  background-color: var(--color-blood);
+  background-color: var(--color-grey);
   border-radius: 0.5rem;
   margin: 0 1rem;
   padding: 0.5rem;
   font-size: calc(var(--base-font-size) / 2);
   font-weight: bold;
-  color: var(--color-white);
 }
 
 .respond {
