Fixed footer hover colors, removed progress bar color change for performance improvement.

--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -37,7 +37,7 @@ footer {
       transition: var(--speed-fast);
 
       &:hover {
-        background-color: var(--color-yellow);
+        background-color: var(--color-white);
         transform: translateY(0);
       }
     }
