--- a/src/styles/_classes.scss
+++ b/src/styles/_classes.scss
@@ -109,3 +109,14 @@
     margin-right: 0;
   }
 }
+
+.bandcamp {
+  border: none;
+  margin: 1rem;
+  z-index: 2;
+}
+
+.youtube {
+  z-index: 2;
+  height: 69vh;
+}
