Minor design fixes.

--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -30,7 +30,7 @@ footer {
       border-radius: .75rem .75rem 0 0;
       padding: 1rem 0;
 
-      background-color: var(--color-grey);
+      background-color: var(--color-darkgrey);
       text-align: center;
 
       transform: translateY(.5rem);
