--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,12 +9,13 @@ $red: #af3333; // FOR DEBUGGING
   --golden-ratio: 38.2%;
 
   // COLOR PALETTE
-  --color-staticwhite: #eeeeee;
-  --color-white: #eeeeee;
+  --color-staticwhite: #eee;
+  --color-white: #eee;
   --color-blood: #af3333;
   --color-dark: #1e1e1e;
   --color-green: #6a9955;
   --color-grey: #d2d2ce;
+  --color-darkgrey: #adada9;
   --color-orange: #f66c03;
   --color-yellow: #ffb532;
   --color-shadow: rgba(0, 0, 0, 0.15);
