Added back to top button on all pages.

--- a/src/styles/_hub.scss
+++ b/src/styles/_hub.scss
@@ -25,6 +25,7 @@
 @import "../components/NavLink/_nav-link";
 @import "../components/ProgressBar/_progress-bar";
 @import "../components/Section/_section";
+@import "../components/ToTop/_to-top";
 
 // MEDIA QUERIES
 @import "_media-queries";
