--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1144,6 +1144,37 @@ header ul li a:hover {
   max-width: 45rem;
 }
 
+.to-top {
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 1rem;
+  background-color: var(--color-grey);
+  border-top: 1rem solid var(--color-dark);
+  font-size: var(--h6);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 7.35rem;
+  -webkit-transition: var(--speed-slow);
+  transition: var(--speed-slow);
+}
+
+.to-top span {
+  font-size: var(--h3);
+}
+
+.to-top:hover {
+  background-color: var(--color-yellow);
+  -webkit-transition: var(--speed-fast);
+  transition: var(--speed-fast);
+}
+
 @media all and (max-width: 64rem) {
   .banner, .streaming__banner {
     width: 100vw;
