--- a/src/components/ToTop/_to-top.scss
+++ b/src/components/ToTop/_to-top.scss
@@ -1,13 +1,19 @@
+@keyframes wobble {
+        from {transform: translateY(0) translateX(0)}
+        to {transform: translateY(-1rem) translateX(0)}
+      }
+
 .to-top {
   width: 100%;
   height: 100%;
+  margin-top: 1rem;
+  border: none;
   padding: 2rem;
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
   gap: 1rem;
 
   background-color: var(--color-grey);
-  border-top: 1rem solid var(--color-dark);
   font-size: var(--h6);
   position: sticky;
   top: 7.35rem;
@@ -16,10 +22,21 @@
 
   span {
     font-size: var(--h3);
+    transition: var(--speed-fast);
   }
 
   &:hover {
-    background-color: var(--color-yellow);
-    transition: var(--speed-fast);
+    background-color: var(--color-white);
+    color: var(--color-blood);
+
+    transition:
+      transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93),
+      border-radius 0.2s;
+
+    span{
+      transform: translateY(-3rem) translateX(-1);
+
+      animation: wobble var(--speed-fast) infinite alternate;
+    }
   }
 }
