--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1144,19 +1144,39 @@ header ul li a:hover {
   max-width: 45rem;
 }
 
+@-webkit-keyframes wobble {
+  from {
+    -webkit-transform: translateY(0) translateX(0);
+            transform: translateY(0) translateX(0);
+  }
+  to {
+    -webkit-transform: translateY(-1rem) translateX(0);
+            transform: translateY(-1rem) translateX(0);
+  }
+}
+
+@keyframes wobble {
+  from {
+    -webkit-transform: translateY(0) translateX(0);
+            transform: translateY(0) translateX(0);
+  }
+  to {
+    -webkit-transform: translateY(-1rem) translateX(0);
+            transform: translateY(-1rem) translateX(0);
+  }
+}
+
 .to-top {
   width: 100%;
   height: 100%;
+  margin-top: 1rem;
+  border: none;
   padding: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   gap: 1rem;
   background-color: var(--color-grey);
-  border-top: 1rem solid var(--color-dark);
   font-size: var(--h6);
   position: -webkit-sticky;
   position: sticky;
@@ -1167,12 +1187,24 @@ header ul li a:hover {
 
 .to-top span {
   font-size: var(--h3);
+  -webkit-transition: var(--speed-fast);
+  transition: var(--speed-fast);
 }
 
 .to-top:hover {
-  background-color: var(--color-yellow);
-  -webkit-transition: var(--speed-fast);
-  transition: var(--speed-fast);
+  background-color: var(--color-white);
+  color: var(--color-blood);
+  -webkit-transition: border-radius 0.2s, -webkit-transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93);
+  transition: border-radius 0.2s, -webkit-transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93);
+  transition: transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93), border-radius 0.2s;
+  transition: transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93), border-radius 0.2s, -webkit-transform var(--speed-slow) cubic-bezier(0.28, 0.78, 0.6, 0.93);
+}
+
+.to-top:hover span {
+  -webkit-transform: translateY(-3rem) translateX(-1);
+          transform: translateY(-3rem) translateX(-1);
+  -webkit-animation: wobble var(--speed-fast) infinite alternate;
+          animation: wobble var(--speed-fast) infinite alternate;
 }
 
 @media all and (max-width: 64rem) {
