--- a/src/components/ToTop/_to-top.scss
+++ b/src/components/ToTop/_to-top.scss
@@ -6,17 +6,17 @@
 .to-top {
   width: 100%;
   height: 100%;
-  margin-top: 1rem;
   border: none;
   padding: 2rem;
   display: flex;
-  // justify-content: space-between;
   gap: 1rem;
 
   background-color: var(--color-grey);
+  border-top: 1rem solid var(--color-dark);
   font-size: var(--h6);
   position: sticky;
   top: 7.35rem;
+  z-index: 2;
 
   transition: var(--speed-slow);
 
