Added Roboto as an import.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=UnifrakturMaguntia&display=swap");
 :root {
   --border-size: 1rem;
   --golden-ratio: 38.2%;
