Added Roboto as an import.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,7 +2,7 @@ $font-main: "Roboto", Arial, Helvetica, sans-serif;
 $font-dragon: "UnifrakturMaguntia", "Times New Roman", serif;
 @import '_mixins';
 @import '_variables';
-@import url('https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=UnifrakturMaguntia&display=swap');
 
 // GLOBAL BODY STYLE
 * {
