Loading animation added to Streaming page.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -621,6 +621,10 @@ section.blog-post {
   font-weight: normal;
 }
 
+#loading-anim {
+  margin: 2rem auto;
+}
+
 .streaming__results {
   display: -webkit-box;
   display: -ms-flexbox;
