Changed order of About text.

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -75,7 +75,7 @@ header {
   background-color: var(--color-white);
 
   transform: translateY(-12rem);
-  transition: all var(--speed-slow) cubic-bezier(.25,.29,.85,.2);
+  transition: all var(--speed-fast) cubic-bezier(.25,.29,.85,.2);
 
   // li {
   //   padding-left: .25rem;
