--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1066,8 +1066,8 @@ header:hover .hover-menu, header:focus .hover-menu, header:active .hover-menu {
   background-color: var(--color-white);
   -webkit-transform: translateY(-12rem);
           transform: translateY(-12rem);
-  -webkit-transition: all var(--speed-slow) cubic-bezier(0.25, 0.29, 0.85, 0.2);
-  transition: all var(--speed-slow) cubic-bezier(0.25, 0.29, 0.85, 0.2);
+  -webkit-transition: all var(--speed-fast) cubic-bezier(0.25, 0.29, 0.85, 0.2);
+  transition: all var(--speed-fast) cubic-bezier(0.25, 0.29, 0.85, 0.2);
 }
 
 .log__cards {
