--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1070,6 +1070,46 @@ header:hover .hover-menu, header:focus .hover-menu, header:active .hover-menu {
   transition: all var(--speed-fast) cubic-bezier(0.25, 0.29, 0.85, 0.2);
 }
 
+@media all and (max-width: 64rem) {
+  @-webkit-keyframes menu-entry {
+    from {
+      -webkit-transform: translateY(-12rem);
+              transform: translateY(-12rem);
+    }
+    to {
+      -webkit-transform: translateY(0rem);
+              transform: translateY(0rem);
+    }
+  }
+  @keyframes menu-entry {
+    from {
+      -webkit-transform: translateY(-12rem);
+              transform: translateY(-12rem);
+    }
+    to {
+      -webkit-transform: translateY(0rem);
+              transform: translateY(0rem);
+    }
+  }
+  .hover-menu {
+    -webkit-animation-name: menu-entry;
+            animation-name: menu-entry;
+    -webkit-animation-delay: 2s;
+            animation-delay: 2s;
+    -webkit-animation-duration: 2s;
+            animation-duration: 2s;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    -webkit-animation-timing-function: cubic-bezier(0.9, 0.49, 0.95, 0.65);
+            animation-timing-function: cubic-bezier(0.9, 0.49, 0.95, 0.65);
+    visibility: visible;
+  }
+  header:hover, header:focus, header:active {
+    -webkit-transform: none;
+            transform: none;
+  }
+}
+
 .log__cards {
   display: -webkit-box;
   display: -ms-flexbox;
