--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -21,7 +21,7 @@ footer {
     border-top: none;
     margin-top: -2rem;
     max-width: 45rem;
-    padding: 0 10rem 0 2rem;
+    padding: 0 5rem 0 2rem;
 
     display: flex;
     flex-direction: row;
@@ -43,3 +43,23 @@ footer {
     }
   }
 }
+
+
+@media all and (max-width: $tablet) {
+  footer section {
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 100vw;
+    
+    a {
+      border-radius: 0;
+      width: 15vw;
+      border-radius: 1rem;
+
+      &:hover {
+        transform: translateY(.5rem);
+      }
+    } 
+  }
+}
+  
