--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -924,7 +924,7 @@ footer section {
   border-top: none;
   margin-top: -2rem;
   max-width: 45rem;
-  padding: 0 10rem 0 2rem;
+  padding: 0 5rem 0 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -949,6 +949,27 @@ footer section a:hover {
   background-color: var(--color-white);
   -webkit-transform: translateY(0);
           transform: translateY(0);
+}
+
+@media all and (max-width: 64rem) {
+  footer section {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    max-width: 100vw;
+  }
+  footer section a {
+    border-radius: 0;
+    width: 15vw;
+    border-radius: 1rem;
+  }
+  footer section a:hover {
+    -webkit-transform: translateY(0.5rem);
+            transform: translateY(0.5rem);
+  }
 }
 
 .goals {
@@ -1307,17 +1328,6 @@ header:hover .hover-menu, header:focus .hover-menu, header:active .hover-menu {
   }
   .streaming__banner {
     max-width: none;
-  }
-  footer section {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    max-width: 100vw;
-  }
-  footer section a {
-    border-radius: 0;
-    width: 57vw;
   }
 }
 
