--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -75,7 +75,7 @@ header {
   background-color: var(--color-white);
 
   transform: translateY(-12rem);
-  transition: all var(--speed-fast) cubic-bezier(.25,.29,.85,.2);
+  transition: all calc(var(--speed-slow) * 1.2) cubic-bezier(.25,.29,.85,.2);
 }
 
 @media all and (max-width: $tablet) {
